# AL1S

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/wakewords/: 爱丽丝_zh_mac_v3_0_0.ppn  爱丽丝_zh_windows_v3_0_0.ppn
config/: __init__.py  settings.py
docs/zh/: README.md
llm/: __init__.py  function_calling.py  openai_client.py
tools/: __init__.py  datetime_provider.py  duckduckgo.py  mqtt_client.py
utils/: __init__.py  web_utils.py
voice/: __init__.py  speech_recognition.py  tts.py  wake_word.py
