[project]
name = "Athena"
version = "0.1.0"
description = "A Chinese voice assistant powered by OpenAI's GPT and Python text-to-speech technology, featuring wake word detection and web search capabilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=7.3.0",
    "httpx>=0.27.2",
    "numpy>=2.2.2",
    "openai>=1.61.0",
    "pvporcupine>=3.0.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pyttsx3>=2.98",
    "speechrecognition[audio]>=3.14.1",
]
